--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     function openChest() {
       currentSkillBook = getRandomSkillBook();
-      document.getElementById("result").textContent = "你获得了：" + currentSkillBook;
+      document.getElementById("result").textContent = currentSkillBook;
       chestCount++;
       document.getElementById("chestCount").textContent = chestCount;
     }
