--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>宝典灵魂仙葫开启游戏</h1>
+  <h1>宝典灵魂仙葫</h1>
   <div class="container">
     <div class="count">您已经开启了 <span id="chestCount">0</span> 个仙葫</div>
     <div class="result" id="result"></div>
